# ssao-techniques

./: Cargo.toml  README.md
egui-wgpu/: Cargo.toml
src/: camera.rs  crytek_ssao.rs  main.rs  renderer.rs  resource_manager.rs  scene.rs  texture_debug_view.rs
src/shaders/: crytek_ssao.wgsl  debug_draw.wgsl  test.wgsl  texture_debug.wgsl  texture_debug_depth.wgsl
