[package]
name = "ssao-techniques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
egui = "0.22.0"
egui-wgpu = { path = "egui-wgpu" }
egui-winit = "0.22.0"
env_logger = "0.10.0"
glam = "0.24.1"
gltf = "1.3.0"
pollster = "0.3.0"
rand = "0.8.5"
rfd = "0.11.4"
wgpu = "0.17.0"
winit = "0.28.6"
